Add Copulas.jl info to the docs

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -47,7 +47,6 @@
   doi     = {10.1115/1.2204976}
 }
 
-
 @article{auRareEventSimulation2016,
   title    = {Rare Event Simulation in Finite-Infinite Dimensional Space},
   author   = {Au, Siu-Kui and Patelli, Edoardo},
@@ -61,6 +60,7 @@
   langid   = {english},
   keywords = {Curse of dimension,Markov Chain Monte Carlo,Monte Carlo,Rare Event,Subset Simulation}
 }
+
 
 @article{biBhattacharyyaDistanceEnriching2019,
   title      = {The {{Bhattacharyya}} Distance: {{Enriching}} the {{P-box}} in Stochastic Sensitivity Analysis},
@@ -86,9 +86,6 @@
   year     = {2020}
 }
 
-
-
-
 @article{chan2022adaptive,
   title     = {An adaptive subset simulation algorithm for system reliability analysis with discontinuous limit states},
   author    = {Chan, Jianpeng and Papaioannou, Iason and Straub, Daniel},
@@ -98,6 +95,9 @@
   year      = {2022},
   publisher = {Elsevier}
 }
+
+
+
 
 @article{chingTransitionalMarkovChain2007,
   title     = {Transitional {{Markov Chain Monte Carlo Method}} for {{Bayesian Model Updating}}, {{Model Class Selection}}, and {{Model Averaging}}},
@@ -204,7 +204,6 @@
   langid    = {english}
 }
 
-
 @article{hastingsMonteCarloSampling1970,
   title   = {Monte {{Carlo}} Sampling Methods Using {{Markov}} Chains and Their Applications},
   author  = {Hastings, W. K.},
@@ -216,6 +215,7 @@
   issn    = {0006-3444},
   doi     = {10.1093/biomet/57.1.97}
 }
+
 
 @book{joeDependenceModelingCopulas2015,
   title     = {Dependence {{Modeling}} with {{Copulas}}},
@@ -230,7 +230,7 @@
   title        = {On the Errors Involved in Computing the Empirical Characteristic Function},
   author       = {Jones, M. C. and Lotwick, H. W.},
   year         = {1983},
-  journal = {Journal of Statistical Computation and Simulation},
+  journal      = {Journal of Statistical Computation and Simulation},
   shortjournal = {Journal of Statistical Computation and Simulation},
   volume       = {17},
   number       = {2},
@@ -277,6 +277,23 @@
   doi        = {10.1016/j.probengmech.2004.05.001}
 }
 
+@article{lavernyCopulasjlFullyDistributionsjlcompliant2024,
+  title      = {Copulas.Jl: {{A}} Fully {{Distributions}}.Jl-Compliant Copula Package},
+  shorttitle = {Copulas.Jl},
+  author     = {Laverny, Oskar and Jimenez, Santiago},
+  year       = {2024},
+  month      = {02},
+  day        = {29},
+  journal    = {Journal of Open Source Software},
+  volume     = {9},
+  number     = {94},
+  pages      = {6189},
+  issn       = {2475-9066},
+  doi        = {10.21105/joss.06189},
+  abstract   = {Laverny et al., (2024). Copulas.jl: A fully Distributions.jl-compliant copula package. Journal of Open Source Software, 9(94), 6189, https://doi.org/10.21105/joss.06189},
+  langid     = {english}
+}
+
 @book{li2009sdos,
   author    = {Jie Li and Jianbing Chen},
   edition   = {1},
@@ -286,6 +303,8 @@
   year      = {2009},
   url       = {https://www.wiley.com/en-us/Stochastic+Dynamics+of+Structures-p-9780470824252}
 }
+
+
 
 @article{melchersImportanceSampling1989,
   title   = {Importance Sampling in Structural Systems},
@@ -376,7 +395,6 @@
   url       = {https://www.researchgate.net/publication/280224186_Efficient_Monte_Carlo_Algorithm_For_Rare_Failure_Event_Simulation}
 }
 
-
 @article{rackwitzStructuralReliability1978,
   title   = {Structural Reliability under Combined Random Load Sequences},
   author  = {Rackwitz, R{\"u}diger and Flessler, Bernd},
@@ -390,6 +408,7 @@
   doi     = {10.1016/0045-7949(78)90046-9}
 }
 
+
 @book{raiffaAppliedStatisticalDecision1961,
   title     = {Applied {{Statistical Decision Theory}}},
   author    = {Raiffa, Howard and Schaifer, Robert},
@@ -398,6 +417,21 @@
   publisher = {Division of Research, Graduate School of Business Adminitration, Harvard University},
   location  = {Boston, MA},
   pagetotal = {356}
+}
+
+@article{rosenblattRemarksMultivariateTransformation1952,
+  title      = {Remarks on a {{Multivariate Transformation}}},
+  author     = {Rosenblatt, Murray},
+  year       = {1952},
+  journal    = {The Annals of Mathematical Statistics},
+  volume     = {23},
+  number     = {3},
+  eprint     = {2236692},
+  eprinttype = {jstor},
+  pages      = {470--472},
+  publisher  = {Institute of Mathematical Statistics},
+  issn       = {0003-4851},
+  url        = {https://www.jstor.org/stable/2236692}
 }
 
 @article{schmelzer2023random,
